--- a/mobile-version/package.json
+++ b/mobile-version/package.json
@@ -21,6 +21,9 @@
     "@capacitor/share": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.6",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -50,17 +53,20 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.17.19",
+    "@types/leaflet": "^1.9.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.312.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.66.1",
+    "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.10.4",
