Fix vercel.json to allow icons-gallery.html to be served as static file

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!icons-gallery\\.html|.*\\.(html|js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)).*)",
       "destination": "/index.html"
     }
   ],
